--- a/careweb/templates/registration/change_default_password.html
+++ b/careweb/templates/registration/change_default_password.html
@@ -52,6 +52,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-10">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
                     <div class="contact_form_wrappre2">
                         <h2>
                             Change Password
